--- a/qupath_gui_template/form.yml
+++ b/qupath_gui_template/form.yml
@@ -31,6 +31,7 @@ attributes:
     help: |
       Select the version of this app you would like to use.
     options:
+  memory_multiplier: 4096
 form:
   - app_version
   - cores
@@ -40,3 +41,4 @@ form:
   - bc_queue
   - bc_email_on_started
   - bc_vnc_resolution
+  - memory_multiplier
