--- a/nd_templates/qupath.yaml
+++ b/nd_templates/qupath.yaml
@@ -18,6 +18,6 @@ binaries:
       {{ self.install_dependencies() }}
       curl -sL {{ self.urls[self.version] }} | tar -xJ --strip 1 -C {{ self.install_path }}
       {%- if self.desktop | int > 0 %}
-      echo -e "[Desktop Entry]\nVersion=1\nType=Application\nName=QuPath\nExec={{ self.install_path }}/bin/QuPath\nIcon={{ self.install_path }}/lib/QuPath.png\nTerminal=false\nStartupNotify=false\nCategories=Science;MRI;Neuroimaging;" > /usr/share/applications/qupath.desktop
+      echo "[Desktop Entry]\nVersion=1\nType=Application\nName=QuPath\nExec={{ self.install_path }}/QuPath/bin/QuPath\nIcon={{ self.install_path }}/QuPath/lib/QuPath.png\nTerminal=false\nStartupNotify=false\nCategories=Science;MRI;Neuroimaging;" > /usr/share/applications/qupath.desktop
       cp /usr/share/applications/qupath.desktop /etc/xdg/autostart/qupath.desktop
       {%- endif %}
