--- a/nd_templates/novnc.yaml
+++ b/nd_templates/novnc.yaml
@@ -3,10 +3,13 @@ name: novnc
 url: https://novnc.com/
 binaries:
   urls:
-    git: https://github.com/novnc/websockify
+    websockify: https://github.com/novnc/websockify
+    google-chrome: https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    novnc_proxy: https://raw.githubusercontent.com/novnc/noVNC/{{ self.novnc_proxy_version }}/utils/novnc_proxy
   arguments:
     optional:
-      version: "git"
+      websockify_version: "e81894751365afc19fe64fc9d0e5c6fc52655c36"
+      novnc_proxy_version: "7f5b51acf35963d125992bb05d32aa1b68cf87bf"
   dependencies:
     apt:
       - git
@@ -21,7 +24,23 @@ binaries:
       - novnc
       - python3-websockify
       - python3-numpy
+      - fonts-liberation
+      - pulseaudio
+      - pulseaudio-utils
+      - ffmpeg
+      - libnspr4
+      - libnss3
+      - wget
+      - xdg-utils
+      - fonts-recommended
+      - pavucontrol
+      - dbus-user-session
   instructions: |
       {{ self.install_dependencies() }}
+      mkdir /.repro-bins /var/log/app
+      curl -fsL -o /.repro-bins/google-chrome.deb {{ self.urls['google-chrome'] }}
+      apt install /.repro-bins/google-chrome.deb
       rm -f /etc/xdg/autostart/xscreensaver.desktop
-      git clone {{ self.urls[self.version] }} /usr/share/novnc/utils/websockify
+      git clone --no-checkout {{ self.urls['websockify'] }} /usr/share/novnc/utils/websockify
+      git -C /usr/share/novnc/utils/websockify checkout {{ self.websockify_version }}
+      curl -fsL -o /usr/share/novnc/utils/novnc_proxy {{ self.urls['novnc_proxy'] }}
