--- a/nd_templates/novnc.yaml
+++ b/nd_templates/novnc.yaml
@@ -10,6 +10,25 @@ binaries:
     optional:
       websockify_version: "e81894751365afc19fe64fc9d0e5c6fc52655c36"
       novnc_proxy_version: "7f5b51acf35963d125992bb05d32aa1b68cf87bf"
+      vnc_startup_script: |
+        #!/bin/bash\n
+        set -e\n
+        VNC_COL_DEPTH=$((VNC_COL_DEPTH+0))\n
+        if [ "$VNC_COL_DEPTH" -ne 8 ] && [ "$VNC_COL_DEPTH" -ne 16 ] && [ "$VNC_COL_DEPTH" -ne 24 ] && [ "$VNC_COL_DEPTH" -ne 32 ]; then\n
+          echo "------------------ VNC color depth reset to 24 ---------------"\n
+          VNC_COL_DEPTH=24\n
+        fi\n
+        PASSWD_PATH="$HOME/.vnc/passwd"\n
+        mkdir -p $(dirname "$PASSWD_PATH")\n
+        echo "$VNC_PW" | vncpasswd -f > "$PASSWD_PATH"\n
+        chmod 600 "$PASSWD_PATH"\n
+        "$NO_VNC_HOME"/utils/novnc_proxy --vnc localhost:"$VNC_PORT" --listen "$NO_VNC_PORT" &\n
+        PID_SUB=$!\n
+        export $(dbus-launch)\n
+        pulseaudio --start\n
+        /usr/bin/vncserver "$DISPLAY" -rfbport "$VNC_PORT" -depth "$VNC_COL_DEPTH" -geometry "$VNC_RESOLUTION" PasswordFile="$PASSWD_PATH"\n
+        echo "connect via VNC viewer on $(hostname -s):${NO_VNC_PORT}/vnc.html"\n
+        wait $PID_SUB\n
   dependencies:
     apt:
       - git
@@ -36,11 +55,22 @@ binaries:
       - pavucontrol
       - dbus-user-session
   instructions: |
-      {{ self.install_dependencies() }}
-      mkdir /.repro-bins /var/log/app
-      curl -fsL -o /.repro-bins/google-chrome.deb {{ self.urls['google-chrome'] }}
-      apt install /.repro-bins/google-chrome.deb
-      rm -f /etc/xdg/autostart/xscreensaver.desktop
-      git clone --no-checkout {{ self.urls['websockify'] }} /usr/share/novnc/utils/websockify
-      git -C /usr/share/novnc/utils/websockify checkout {{ self.websockify_version }}
-      curl -fsL -o /usr/share/novnc/utils/novnc_proxy {{ self.urls['novnc_proxy'] }}
+    {{ self.install_dependencies() }}
+    mkdir /.repro-bins /var/log/app
+    curl -fsL -o /.repro-bins/google-chrome.deb {{ self.urls['google-chrome'] }}
+    apt install /.repro-bins/google-chrome.deb
+    rm -f /etc/xdg/autostart/xscreensaver.desktop
+    git clone --no-checkout {{ self.urls['websockify'] }} /usr/share/novnc/utils/websockify
+    git -C /usr/share/novnc/utils/websockify checkout {{ self.websockify_version }}
+    curl -fsL -o /usr/share/novnc/utils/novnc_proxy {{ self.urls['novnc_proxy'] }}
+    printf '{{ self.vnc_startup_script }}' | sed 's/^[[:space:]]*&& //' > /opt/vnc_startup.sh
+    chmod +x {{ self.env.VNC_ENTRYPOINT }}
+  env:
+    DISPLAY: ":1"
+    VNC_PORT: "5901"
+    NO_VNC_PORT: "6901"
+    VNC_RESOLUTION: "1024x768"
+    VNC_COL_DEPTH: "24"
+    VNC_PW: "vncpassword"
+    NO_VNC_HOME: "/usr/share/novnc"
+    VNC_ENTRYPOINT: "/opt/vnc_startup.sh"
