--- a/nd_templates/rstudio.yaml
+++ b/nd_templates/rstudio.yaml
@@ -6,16 +6,26 @@ binaries:
     latest: https://hub.docker.com/r/rocker/rstudio
   arguments:
     optional:
-      version: "4.4.1"
-      addons: "renv"
-  dependencies:
-    yum:
-      - tmux
+      addons: ""
+      rprofile: ""
+      bioconductor: ""
+      seurat: "N"
   instructions: |
-    {{ self.install_dependencies() }}
+    echo "Starting build of RStudio image"
+    {% if self.rprofile %}
+    echo '{{ self.rprofile }}' > /usr/local/lib/R/etc/Rprofile.site
+    {% endif %}
+    {% if self.bioconductor %}
+    R -q -e "install.packages('BiocManager', quietly = TRUE); BiocManager::install(version = '{{ self.bioconductor }}', ask = FALSE)"
+    {% endif %}
     {% if self.addons %}
     install2.r --error --skipinstalled --ncpus -1 {{ self.addons }}
     rm -rf /tmp/downloaded_packages
+    {% endif %}
+    {% if self.seurat == "Y" %}
+    R -q -e "if (!requireNamespace('remotes', quietly = TRUE)) install.packages('remotes'); install.packages('Seurat')"
+    R -q -e "setRepositories(ind = 1:3, addURLs = c('https://satijalab.r-universe.dev', 'https://bnprks.r-universe.dev/')); install.packages(c("BPCells", "presto", "glmGamPoi"))"
+    R -q -e "install.packages('Signac'); remotes::install_github("satijalab/seurat-data", quiet = TRUE); remotes::install_github("satijalab/azimuth", quiet = TRUE); remotes::install_github("satijalab/seurat-wrappers", quiet = TRUE)"
     {% endif %}
   env:
     TZ: "America/New_York"
