--- a/fmriprep_template/form.yml
+++ b/fmriprep_template/form.yml
@@ -32,7 +32,7 @@ attributes:
     label: "Output Directory"
     help: "The output path for the outcomes of preprocessing and visual reports"
   skip_bids_validation:
-    widget: "checkbox"
+    widget: "check_box"
     label: "Skip BIDS Validation"
     help: "Assume the input dataset is BIDS compliant and skip the validation."
   participant_label:
@@ -64,7 +64,7 @@ attributes:
     label: "Nipype Plugin File"
     help: "Nipype plugin configuration file."
   anat_only:
-    widget: "checkbox"
+    widget: "check_box"
     label: "Anatomical Workflows Only"
     help: "Run anatomical workflows only."
   level:
@@ -76,11 +76,11 @@ attributes:
       - [ "resampling", "resampling" ]
       - [ "minimal", "minimal" ]
   boilerplate_only:
-    widget: "checkbox"
+    widget: "check_box"
     label: "Boilerplate Only"
     help: "Generate boilerplate only."
   reports_only:
-    widget: "checkbox"
+    widget: "check_box"
     label: "Reports Only"
     help: "Only generate reports, don’t run workflows."
   ignore:
@@ -96,7 +96,7 @@ attributes:
     label: "Output Spaces"
     help: "Standard and non-standard spaces to resample anatomical and functional images to."
   longitudinal:
-    widget: "checkbox"
+    widget: "check_box"
     label: "Longitudinal Dataset"
     help: "Treat dataset as longitudinal - may increase runtime."
   bold2anat_init:
@@ -140,7 +140,7 @@ attributes:
       - [ "bids", "bids" ]
       - [ "legacy", "legacy" ]
   verbose:
-    widget: "checkbox"
+    widget: "check_box"
     label: "Verbose Logging"
     help: "Increases log verbosity for each occurrence."
 
