--- a/fmriprep_template/form.yml
+++ b/fmriprep_template/form.yml
@@ -170,19 +170,19 @@ attributes:
     widget: "check_box"
     label: "Verbose Logging"
     help: "Increases log verbosity for each occurrence."
-  no-submm-recon:
+  no_submm_recon:
     widget: "check_box"
     label: "Disable Sub-Millimeter Reconstruction"
     help: "Disable sub-millimeter (hires) reconstruction."
-  fs-no-reconall:
+  fs_no_reconall:
     widget: "check_box"
     label: "Disable FreeSurfer Surface Preprocessing"
     help: "Disable FreeSurfer surface preprocessing."
-  fs-no-resume:
+  fs_no_resume:
     widget: "check_box"
     label: "Import Pre-computed FreeSurfer Reconstruction Without Resuming"
     help: "EXPERT: Import pre-computed FreeSurfer reconstruction without resuming. The user is responsible for ensuring that all necessary files are present."
-  fs-subjects-dir:
+  fs_subjects_dir:
     widget: "text_field"
     label: "FreeSurfer Subjects Directory"
     help: "Path to existing FreeSurfer subjects directory to reuse. (default: OUTPUT_DIR/freesurfer)"
